--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -1,26 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{% endblock %} &middot; Got it</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="山东理工大学,成绩查询,校外,正方教务系统,四六级成绩查询,学分绩点,考试时间地点,课表,本学期,查询">
-    <meta name="description" content="山东理工大学校外成绩查询,学分绩点查询,四六级成绩查询.">
-    <meta name="author" content="ma6174,zhwei">
-    <meta property="wb:webmaster" content="0c9867e1232b2dd4" />
-
-    <!-- Le styles -->
-    {% include "css.html" %}
-<script language="javascript">
-	if (self!=top) window.top.location.replace(self.location);
-</script>
-
-    {% block head %}
-
-    {% endblock %}
+    <title>{%- block title -%}{%- endblock -%} &middot; Got it</title>
+    {%- include  "includes/head.html" -%}
 
     <style type="text/css">
       body {
@@ -60,11 +42,6 @@
       }
     </style>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="/static/js/html5shiv.js"></script>
-    <![endif]-->
-    
   </head>
 
   <body>
@@ -73,18 +50,18 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          {% block nav %}
-          {% endblock %}
+          {%- block nav -%}
+          {%- endblock -%}
         </ul>
         <h3 class="muted">Got it</h3>
       </div>
 
       <hr>
-      {% block content %}
+      {%- block content -%}
 
-      {% endblock %}
+      {%- endblock -%}
 
-      {% include  "footer.html" %}
+      {%- include  "includes/footer.html" -%}
 
     </div> <!-- container -->
 
@@ -93,6 +70,6 @@
   <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  {% include "js.html" %}
+  {%- include "includes/js.html" -%}
 </body>
 </html>
