--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <li><a href="/donate.html">赞助</a></li>
 {% endblock %}
 
-{% block content %}
+{%- block content -%}
 <div class="jumbotron">
   <p><a class="btn btn-large btn-success" href="">Got It</a></p>
   <div class="text-center">
@@ -25,7 +25,7 @@
 
       <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
       <p>查询本学期课表 成绩以及考试时间.</p>
-      {% if zheng_alert %}
+      {%- if zheng_alert -%}
       <div class="alert alert-info">
         <p>{{ zheng_alert }}</p>
       </div>
@@ -59,11 +59,11 @@
     <div class="well" onclick="location.href='/score';" style="cursor:pointer;">
       <h4><a href="/score">总成绩 学分绩点</a></h4>
       <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
-      {% if score_alert %}
+      {%- if score_alert -%}
       <div class="alert alert-info">
         <p>{{ score_alert }}</p>
       </div>
-      {% endif %}
+      {%- endif -%}
     </div>
   </div>
 
