--- a/templates/base-panel.html
+++ b/templates/base-panel.html
@@ -66,13 +66,14 @@
 
     <div class="container">
         <div class="row">
-            {% block content %}
-
-            {% endblock %}
+          <div class="col-md-12">
+            {% block content %}{% endblock %}
+          </div>
         </div>
     </div> <!-- /container -->
     <div id="footer">
-      <div class="container">
+      <div class="container" style="text-align: center;">
+        <hr>
         <p class="text-muted">Gotit@2014</p>
       </div>
     </div>
