--- a/templates/panel.html
+++ b/templates/panel.html
@@ -47,7 +47,7 @@
         </tbody>
       </table>
     {% elif opera == 'del' %}
-    <div class="lead">
+    <div class="lead" style="text-align: center;">
       <br /><br />
       <form method="post">
         <p class='lead'>是否确认删除？</p>
