--- a/templates/ologin.html
+++ b/templates/ologin.html
@@ -1,11 +1,10 @@
 {% extends 'base-index.html' %}
-{% block title %}我们为你Got it{% endblock %}
+{% block title %}微博登录{% endblock %}
 
 {% block nav %}
 <li class="active"><a href="/">首页</a></li>
-<li><a href="/notice.html">公告</a></li>
-<li><a href="/comment.html">留言</a></li>
-<li><a href="/donate.html">赞助</a></li>
+<li><a href="http://gotit.asia/comment.html">留言</a></li>
+<li><a href="http://gotit.asia/donate.html">赞助</a></li>
 {% endblock %}
 
 {% block content %}
